	thread-safe.
	(_prefilter): change control flow to ensure that we NEVER
	introspect objects when autocall is off.  This will guarantee that
	having an input line of the form 'x.y', where access to attribute
	'y' has side effects, doesn't trigger the side effect TWICE.  It
	is important to note that, with autocall on, these side effects
	can still happen.

	* IPython/macro.py (Macro.__init__): moved macros to a standalone
	file.  Now that they'll be more likely to be used with the
	persistance system (%store), I want to make sure their module path
	doesn't change in the future, so that we don't break things for
	users' persisted data.

	* IPython/iplib.py (autoindent_update): move indentation
	management into the _text_ processing loop, not the keyboard
	interactive one.  This is necessary to correctly process non-typed
	multiline input (such as macros).

	* IPython/Magic.py (Magic.format_latex): patch by Stefan van der
	Walt <stefan-AT-sun.ac.za> to fix latex formatting of docstrings,
	which was producing problems in the resulting manual.
	(magic_whos): improve reporting of instances (show their class,
	instead of simply printing 'instance' which isn't terribly
	informative).

	* IPython/genutils.py (shell): commit Jorgen Stenarson's patch
	(minor mods) to support network shares under win32.

	* IPython/winconsole.py (get_console_size): add new winconsole
	module and fixes to page_dumb() to improve its behavior under
	win32.  Contributed by Alexander Belchenko <bialix-AT-ukr.net>.

	* IPython/Magic.py (Macro): simplified Macro class to just
	subclass list.  We've had only 2.2 compatibility for a very long
	time, yet I was still avoiding subclassing the builtin types.  No
	more (I'm also starting to use properties, though I won't shift to
	2.3-specific features quite yet).
	(magic_store): added Ville's patch for lightweight variable
	persistence, after a request on the user list by Matt Wilkie
	<maphew-AT-gmail.com>.  The new %store magic's docstring has full